2013-05-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- スタミナ計算で不要なバックダッシュフラグが残っていたバグを修正

2013-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- CONTROL_BUFがint型になっていたバグを修正
	- ボールノイズ率のパラメータを変数化
	- OmniDashのヒューリスティック距離計算で横方向のずれを大きく扱うよ
	うに変更
	- OmniDashのシミュレーション途中でキッカブル状態になっても予定ステッ
	プ数まですべてシミュレーションするように変更

	* rcsc/player/intercept_table.cpp:
	* rcsc/player/self_intercept_simulator.cpp:
	- バックダッシュ回数を制限
	- ターン回数計算で制御範囲に一貫性が無かったバグを修正
	- 新しいインターセプトを有効化

	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/self_intercept_v13.cpp:
	- インスタンス比較のためにInterceptInfo::Typeを追加

	* rcsc/player/intercept_table.cpp:
	* rcsc/player/intercept_table.h:
	- 予測最大ステップ数として10以上を必ず確保するように変更
	- InterceptInfo::Cmpを削除

	* rcsc/action/body_intercept2009.cpp:
	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/self_intercept_simulator.h:
	* rcsc/player/self_intercept_v13.cpp:
	- 誤用を避けるためにInterceptInfo::dashAngle()をdashDir()へリネー
	ムし，型をAngleDegからdoubleへ変更

	* rcsc/player/self_intercept_simulator.cpp:
	- OmniDashインターセプトを実装．未テスト
	- ソート後に重複した候補を削除する処理を追加

2013-05-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/self_intercept_simulator.h:
	* rcsc/player/Makefile.am:
	- SelfInterceptSimulatorクラス追加．実装途中

	* rcsc/player/self_intercept_v13.cpp:
	- 1ステップダッシュのダッシュ効率計算で，ダッシュ方向ではなく自分
	の体の向きを使用していたバグを修正

	* rcsc/player/self_intercept_v13.cpp:
	- 不要な関数呼び出し削除，デバッグメッセージ修正

2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_smart_kick.cpp:
	- デバッグメッセージ修正

	* rcsc/action/kick_table.cpp:
	- デバッグメッセージ修正

2013-05-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/kick_table.cpp:
	- risky modeに入る条件を誤っていたバグを修正

	* rcsc/common/logger.cpp:
	* rcsc/common/logger.h:
	- Logger::PLANを末尾へ移動
